--- a/javascript/apps/taiga/src/app/commons/navigation/navigation-user-dropdown/navigation-user-dropdown.component.css
+++ b/javascript/apps/taiga/src/app/commons/navigation/navigation-user-dropdown/navigation-user-dropdown.component.css
@@ -72,13 +72,6 @@ li {
   font-weight: 700;
   padding: var(--spacing-1);
 
-  &.sign-out {
-    border-top: solid 1px var(--color-gray30);
-    color: var(--color-secondary);
-    margin-top: .75rem;
-    padding-top: .75rem;
-  }
-
   &:hover {
     background-color: var(--color-gray20);
     color: var(--color-secondary80);
@@ -87,4 +80,11 @@ li {
   &:focus-visible {
     outline: 1px solid var(--color-secondary);
   }
+}
+
+.sign-out {
+  border-top: solid 1px var(--color-gray30);
+  color: var(--color-secondary);
+  margin-top: var(--spacing-2);
+  padding-top: var(--spacing-2);
 }
